<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FIDABI TECAZUAY</string>
    <string name="share_via">Compartir via</string>
    <string name="base_link_apk">https://play.google.com/store/apps/details?id=</string>
    <string name="cancel">Cancelar</string>
    <string name="signin_button_text">Iniciar sesión</string>
    <string name="search_hint">Buscar...</string>
    <string name="search_menu_title">Buscar</string>
    <string name="more">Más</string>
    <string name="sure_exit">¿Estás seguro de que quieres salir?</string>
    <string name="bottom_navigation_menu_home">Inicio</string>
    <string name="notifications">Notificaciones</string>
    <string name="language">Idioma</string>
    <string name="help">Ayuda</string>
    <string name="share">Compartir</string>
    <string name="role">Administrador</string>
    <string name="acount">Cuenta</string>
    <string name="personal_data">Datos personales</string>
    <string name="app_settings">Ajustes de la app</string>
    <string name="others">Otros</string>
    <string name="playstore">Visitar la app en Play Store</string>
    <string name="accept">Aceptar y Continuar</string>
    <string name="hi_user">HOLA!\n[User Name]</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="success_alert">¡Exito!</string>
    <string name="success_mssg">Se guardo la información correctamente</string>
    <string name="fail_alert">Algo ocurrió….</string>
    <string name="reminder_off">Recordatorio apagado</string>
    <string name="vibrate_only">Sólo vibración</string>
    <string name="ringtone_with_vibrate">Tono con vibración</string>
    <string name="recent_activity">Actividad Reciente</string>
    <string name="welcome_mss">Bienvenido a FIBADI ⭐</string>
    <string name="welcome_user_name">Hola, bienvenid@\n{user name}</string>
    <string name="role_id">Administrador</string>
    <string name="categories">Categorías</string>
    <string name="list_custodios">Listar Custodios</string>
    <string name="search_results">Resultados de la busqueda</string>
    <string name="update">Actualizar</string>
    <string name="update_custodio">Actualizar Custodio</string>
    <string name="data_user_custodio">Datos del custodio</string>
    <string name="recover_your_account">Recupera tu cuenta</string>
    <string name="recover_your_account_btn">Recuperar Cuenta</string>
    <string name="categories_id">[category_id]</string>
    <string name="details_txt">DETALLES</string>
    <string name="selected_category_id">[Categoría Seleccionada]</string>
    <string name="search_mss">Que es lo que estas buscando?</string>
    <string name="see_more">Ver Más</string>
    <string name="recover_account_mss">Ingresa tu correo electrónico o número de celular para buscar tu cuenta.</string>
    <string name="fail_mssg">Fallo al intentar guardar la información, por favor revise su conexión a internet</string>
    <string name="home_dsc_btn">ir al home</string>
    <string name="scan_dsc_btn">Abrir opciones de scaneo</string>
    <string name="user_profile_dsc_btn">Abrir opciones del perfil y otros más.</string>
    <string name="admin_dsc_btn">Abrir opciones de administración.</string>
    <string name="categories_dsc_btn">Abrir todas las categorias disponibles.</string>
    <string-array name="descripcion_lugar_options">
        <item>Seleccione una opción</item>
        <item>Se encuentra en el lugar correcto</item>
        <item>No se encuentra en el lugar correcto</item>
    </string-array>
    <string name="select_option">Seleccione una opción</string>
    <string name="usu_txt">Usuario:</string>
    <string name="usu_hint">Ingresa tu nombre de usuario.</string>
    <string name="lastname_txt">Apellido:</string>
    <string name="lastname_hint">Ingresa tu apellido.</string>
    <string name="phone_number_txt">Telefono:</string>
    <string name="phone_number_hint">Ingrese su numero de telefono.</string>
    <string name="name_txt">Nombre:</string>
    <string name="name_hint">Ingresa tu nombre.</string>
    <string name="state_txt">Estado:</string>
    <string name="notification_settings_txt">Ajustes De Las Notificaciones</string>
    <string name="notification_txt">Notificaciones</string>
    <string name="app_settings_txt">Ajustes De La App</string>
    <string name="timer_txt">Tiempo de actualización</string>

</resources>