<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/update_custodio"
            android:textAlignment="center"
            android:textColor="@color/blueistadark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/search_results_txt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/data_user_custodio"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/usu_txt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ET_Usuario"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="Name for the custodio"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name_txt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ET_Nombre"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/name_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/lastname_txt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ET_Apellido"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/lastname_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/phone_number_txt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ET_Apellido2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/phone_number_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/state_txt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/roomName2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="Name for the custodio"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <Button
                android:id="@+id/actualizar_txt"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/backgroup_popup"
                android:backgroundTint="#7431EF"
                android:text="@string/update"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>