<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomBar" />

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-15dp"
                android:src="@drawable/backgroup_popup" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homebtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/icon_home"
                    android:backgroundTint="#402CB1"
                    android:clickable="true"
                    android:contentDescription="@string/home_dsc_btn"
                    android:padding="4dp" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="100dp"
                    android:background="@drawable/button_add"
                    android:contentDescription="@string/scan_dsc_btn" />

                <Button
                    android:id="@+id/categorias_btn"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/home_center_button_bg"
                    android:contentDescription="@string/categories_dsc_btn" />

                <Button
                    android:id="@+id/admin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="100dp"
                    android:background="@drawable/admin_icon"
                    android:contentDescription="@string/admin_dsc_btn" />

                <Button
                    android:id="@+id/user_settings"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="false"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/user_icon"
                    android:contentDescription="@string/user_profile_dsc_btn" />

            </RelativeLayout>

        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>
