<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="com.example.fidabi_m4a_projecto_final.fragments.act_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomBar" />

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-15dp"
                android:src="@drawable/backgroup_popup" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/homebtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:background="@drawable/icon_home"
                    android:backgroundTint="#402CB1"
                    android:padding="4dp"
                    android:clickable="true"
                    android:contentDescription="@string/home_dsc_btn" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_toEndOf="@+id/homebtn"
                    android:layout_toRightOf="@+id/homebtn"
                    android:background="@drawable/button_add"
                    android:contentDescription="@string/scan_dsc_btn" />

                <ImageView
                    android:id="@+id/categorias"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="false"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:contentDescription="@string/categories_dsc_btn"
                    android:src="@drawable/home_center_button_bg" />

                <Button
                    android:id="@+id/admin"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_toStartOf="@+id/user_settings"
                    android:layout_toLeftOf="@+id/user_settings"
                    android:background="@drawable/admin_icon"
                    android:contentDescription="@string/admin_dsc_btn" />

                <Button
                    android:id="@+id/user_settings"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/user_icon"
                    android:contentDescription="@string/user_profile_dsc_btn" />

            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>
