<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1"
        android:background="@drawable/round_bg_while"
        android:orientation="vertical"
        android:weightSum="6">

        <TextView
            android:id="@+id/cod_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/acount"
            android:textColor="#252450"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="#ededed" />

        <RelativeLayout
            android:id="@+id/Item_1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="#ededed" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/notification_profile_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/notifications"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/data_user"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="#ededed" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/personal_data_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img2"
                android:fontFamily="sans-serif-thin"
                android:text="@string/personal_data"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ajustes"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="#ededed" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/app_settings_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img3"
                android:fontFamily="sans-serif-thin"
                android:text="@string/app_settings"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/others"
            android:textColor="#252450"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="#ededed" />

        <RelativeLayout
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="#ededed" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/share_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img4"
                android:fontFamily="sans-serif-thin"
                android:text="@string/share"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Twitter"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="#ededed" />

            <ImageView
                android:id="@+id/img5"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/google_play_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img5"
                android:fontFamily="sans-serif-thin"
                android:text="@string/playstore"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Gmail"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="#ededed" />

            <ImageView
                android:id="@+id/img6"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/logout_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img6"
                android:fontFamily="sans-serif-thin"
                android:text="@string/log_out"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
